[package]
name = "gunmail"
version = "0.0.2"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features=false, features = ["serde"] }
futures-core = "0.3.28"
percent-encoding = "2.3.0"
reqwest = { version = "0.11.20", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"

